[package]
name = "sport_monks"
version = "0.1.0"
authors = ["tehAnswer <sergiorodriguezgijon@gmail.com>"]
license = "MIT"
description = "Unofficial SportMonks.com Rust Client."
repository = "https://github.com/tehAnswer/sport_monks"
readme = "README.md"

[badges]
travis-ci = { repository = "tehAnswer/sport_monks:master" }

[dependencies]
reqwest = { version = "0.9.8", features = ["hyper-011"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mockito = "0.13.0"
chrono = "0.4"